# map-folium

./: .env.example  .gitignore  LICENSE  README.md  index.html  main.py  map.html  pyproject.toml
data/: points-of-interest.csv  ustp-buildings.geojson
notebooks/: 1.0-test-folium.ipynb
src/: __init__.py  config.py
src/matplotlib/: __init__.py  color.py  iragca_ml.mplstyle
src/utils/: __init__.py  check_env_variable.py  greetings.py
