[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
]
authors = [
    { name = "Chris Andrei Irag", email = "chrisandrei.irag@1.ustp.edu.ph" }
]

[dependency-groups]
dev = [
    "src",
]

[tool.uv.sources]
src = { workspace = true }
